2006-12-26  Danilo Šegan  <danilo@gnome.org>

	* sr.po, sr@Latn.po: Updated.

2006-12-17  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2006-12-16  Matic Zgur  <mr.zgur@gmail.com>

	* sl.po: Updated Slovenian translation.

2006-12-14  Tyronne Wickramaratne  <admin@bershath.org>

	* si.po: Updated Sinhala Translation.

2006-12-14  Amitakhya Phukan  <aphukan@redhat.com>

	* LINGUAS: Added 'as' after 'ar'
	* as.po: Added and updated Assamese Translation.

2006-12-14  Subhransu Behera  <arya_subhransu@yahoo.co.in>

	* or.po: Updated Oriya Translation.

2006-12-13  Ani Peter  <peter.ani@gmail.com>

	* ml.po: Updated Malayalam Translation

2006-12-13  Runa Bhattacharjee <runabh@gmail.com>

	* bn_IN.po: Updated Bengali India Translation.

2006-12-13  Ani Peter <peter.ani@gmail.com>

	* ml.po: Updated Malayalam(ml.po) Translation

2006-12-12  I. Felix  <ifelix25@gmail.com>

	* ta.po: Updated corrected Tamil Translation.

2006-12-12  I. Felix  <ifelix25@gmail.com>

	* ta.po: Updated Tamil Translation.

2006-12-12  Rajesh Ranjan <rajeshkajha@yahoo.com>

        * hi.po: Updated Hindi Translation.

2006-12-12  Rajesh Ranjan <rajeshkajha@yahoo.com>

        * hi.po: Updated Hindi Translation.

2006-12-05  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Tino Meinen.

2006-12-11  Ani Peter  <peter.ani@gmail.com>

	* ml.po: Upadted Malayalam translation.

2006-12-05  David Lodge <dave@cirt.net>

	* en_GB.po: Updated English (British) translation

2006-12-02  Clytie Siddall <clytie@riverland.net.au>

	* vi.po: Updated Vietnamese translation.

2006-11-24  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian Translation.

2006-11-24  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* ca.po: Updated Catalan translation.

2006-11-19  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* pl.po: Translation updated by Wojciech Kapusta.

2006-11-19  Duarte Loreto <happyguy_pt@hotmail.com>
