@@ -3,7 +3,7 @@
 config/CDE.desktop.in
 config/default.desktop.in
 config/gnome.desktop.in
-config/ssh.desktop.in.in
+config/ssh.desktop.in
 config/gettextfoo.h
 daemon/auth.c
 daemon/display.c
@@ -35,7 +35,7 @@ gui/gdmphotosetup.desktop.in
 gui/gdmphotosetup.glade
 gui/gdmsession.c
 gui/gdmsetup.c
-gui/gdmsetup.desktop.in.in
+gui/gdmsetup.desktop.in
 gui/gdmsetup.glade
 gui/gdmuser.c
 gui/gdmwm.c
@@ -43,6 +43,7 @@ gui/greeter/greeter.c
 gui/greeter/greeter_action_language.c
 gui/greeter/greeter_canvas_item.c
 gui/greeter/greeter_item.c
+gui/greeter/greeter_item_customlist.c
 gui/greeter/greeter_item_ulist.c
 gui/greeter/greeter_parser.c
 gui/greeter/greeter_session.c
