@@ -1,3 +1,8 @@
+2007-01-29  Brian Cameron  <brian.cameron@sun.com>
+
+        * POTFILES.in: Do not reference desktop.in.in files in POTFILES.in.
+          This makes make distcheck mad.
+
 2006-12-26  Danilo Šegan  <danilo@gnome.org>
 
 	* sr.po, sr@Latn.po: Updated.
